<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp"
        android:text="Chuta letra" />

    <EditText
        android:id="@+id/tentativa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:ems="10" />

    <EditText
        android:id="@+id/resposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tentativa"
        android:layout_alignLeft="@+id/tentativa"
        android:ems="10"
        android:focusable="false" >

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/corpo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cabeca"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/button1"
        android:contentDescription="@string/corpo"
        android:src="@drawable/corpo"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/cabeca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginTop="23dp"
        android:layout_toRightOf="@+id/button1"
        android:contentDescription="@string/cabeca"
        android:src="@drawable/cabeca"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/perna1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/corpo"
        android:layout_alignTop="@+id/perna2"
        android:contentDescription="@string/perna_esquerda"
        android:src="@drawable/perna_esquerda"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/braco2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/corpo"
        android:layout_toRightOf="@+id/corpo"
        android:contentDescription="@string/game_over"
        android:src="@drawable/braco_direito"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/braco1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/corpo"
        android:layout_toLeftOf="@+id/perna1"
        android:contentDescription="@string/braco_esquerdo"
        android:src="@drawable/braco_esquerdo"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/perna2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/corpo"
        android:layout_toLeftOf="@+id/perna1"
        android:contentDescription="@string/perna_direita"
        android:src="@drawable/perna_direita"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/resposta"
        android:layout_alignRight="@+id/corpo"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/forca"
        android:src="@drawable/forca" />

</RelativeLayout>